add non retro date information

--- a/sites/handbook/source/handbook/people-group/relocation/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/relocation/index.html.md.erb
@@ -94,7 +94,7 @@ Adjusting [pay according to the local market in all cases](/handbook/total-rewar
 1. Upload the manager email (above) to your Workday profile. See [How to: Upload Documents](https://docs.google.com/document/d/19B0lsMu7dMhof1ghPuBxHP23DuDqi2qpWF8pCWyEUN4/edit)
 1. Complete the [relocation form](https://docs.google.com/forms/d/e/1FAIpQLSeRyR2FG43izzVW2FrImUCNVWiMtIlA0JAFIJaO2V-ArzQs0Q/viewform).
 
-Note: Assuming your relocation is approved, any applicable changes in compensation will not be effective until your move date (or the date you start working in the new location), which will be listed as the effective date on your new contract.
+Note: Assuming your relocation is approved, any applicable changes in compensation will not be effective until your move date (or the date you start working in the new location), which will be listed as the effective date on your new contract. **We will not be able to process retroactive dated relocations. Please only use future dates when applying for your relocation.**
 
 ### Approvals Phase
 Below there is a description for the steps that need to be taken for approving a long term relocation. If the geographical location and/or country are different from the current location, the following steps will be followed: 
