--- a/sites/handbook/source/handbook/engineering/development/ops/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/index.html.md.erb
@@ -103,6 +103,20 @@ Planning processes followed by teams in the Sub-department:
 
 - [General Ops Sub-department Planning Process](/handbook/engineering/development/ops/general-planning.html)
 
+### Forced Priority planning/scheduling
+
+Our [prioritization framework](/handbook/product/product-processes/#prioritization-framework) describes a number of [Forced Priority](https://about.gitlab.com/handbook/product/product-processes/#forced-prioritization) labels that present a high risk to our customers and our business. As such, it's critical that we complete this work within the appropriate SLO/SLAs where possible. An example of this are security issues, here's a dashboard for past due and soon to be due security issues: https://app.periscopedata.com/app/gitlab/913607/Past-Due-Security-Issues-Development
+
+With this in mind, here's a process that groups are encouraged to use and iterate on in the event that they don't have an existing approach or are falling behind on SLA/SLOs.
+
+To be clear, this is not a required process, if your group's approach is working, please continue with that! Ownership of scheduling forced priority work falls on our whole team, not a particular person.
+
+1. When forced priority issues are assigned to your group, schedule those issues right away regardless of severity label
+1. Have the team review the issue to make sure there's a viable solution and plan (weight the issue)
+1. Have someone in the group assign themselves to work on the issue
+1. Update the issue regularly with progress
+1. Treat blockers with the same *or higher* priority than the original issue
+
 ## Ops Promotion Process
 
 ### Promotion Document Reviews
