Update Sec section direction page

--- a/source/direction/dev/template.html.md.erb
+++ b/source/direction/dev/template.html.md.erb
@@ -1,5 +1,5 @@
 ---
-layout: secure_and_protect_direction
+layout: sec_direction
 title: "Product Section Direction - Dev"
 description: "The Dev Section is made up of the Manage, Plan, and Create stages of the DevOps lifecycle and encompasses a number of analyst categories"
 canonical_path: "/direction/dev/"
