--- a/source/direction/enablement/template.html.md.erb
+++ b/source/direction/enablement/template.html.md.erb
@@ -1,5 +1,5 @@
 ---
-layout: secure_and_protect_direction
+layout: sec_direction
 title: "Product Section Direction - Enablement"
 description: "GitLab's Enablement section is responsible for the features and tools our customers use to operate GitLab at all scales. Learn more here!"
 canonical_path: "/direction/enablement/"
