--- a/source/direction/govern/template.html.md.erb
+++ b/source/direction/govern/template.html.md.erb
@@ -1,5 +1,5 @@
 ---
-layout: secure_and_protect_direction
+layout: sec_direction
 title: Product Stage Direction - Govern
 description: "GitLab Govern helps users manage security vulnerabilities, policies, and compliance across their organization. Learn more!"
 canonical_path: "/direction/govern/"
