--- a/source/direction/mobile/mobile-devops/index.html.md.erb
+++ b/source/direction/mobile/mobile-devops/index.html.md.erb
@@ -1,5 +1,5 @@
 ---
-layout: secure_and_protect_direction
+layout: sec_direction
 title: Product Direction - Mobile DevOps
 description: ""
 canonical_path: "/direction/mobile/mobile-devops/"
