--- a/source/direction/secure/template.html.md.erb
+++ b/source/direction/secure/template.html.md.erb
@@ -1,5 +1,5 @@
 ---
-layout: secure_and_protect_direction
+layout: sec_direction
 title: Product Stage Direction - Secure
 description: "The Secure Section focuses on identifying security findings within applications and services prior to moving them to operations. Learn more!"
 canonical_path: "/direction/secure/"
