--- a/source/direction/data-science/index.html.md.erb
+++ b/source/direction/data-science/index.html.md.erb
@@ -1,5 +1,5 @@
 ---
-layout: secure_and_protect_direction
+layout: sec_direction
 title: Product Section Direction - Data Science
 description: "The Data Science Section focuses on transforming data into useful insights and actions."
 canonical_path: "/direction/data-science/"
