Adding Phishing Alarm icon

--- a/sites/handbook/source/handbook/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/security/index.html.md.erb
@@ -815,7 +815,11 @@ you received an email from our testing platform please, select **ONE** of the op
 
 ![PhishAlarm icon](PhishAlarm.png)
 
-PhishAlarm is a Gmail add-on that allows your users to alert security and incident response teams to suspected phishing emails. It will automatically notify GitLab security and the email will be further investigated. (PhishAlarm is found on the right side panel of Gmail. You can hide or show this panel by clicking on the > or < symbol on the bottom right corner of your browser window). **OR** 
+PhishAlarm is a Gmail add-on that allows your users to alert security and incident response teams to suspected phishing emails. It will automatically notify GitLab security and the email will be further investigated. (PhishAlarm is found on the right side panel of Gmail. You can hide or show this panel by clicking on the > or < symbol on the bottom right corner of your browser window). 
+
+![PhishAlarm icon](PhishAlarmicon.png)
+
+**OR** 
 2. Forward the phishing email as an attachment to `phishing@gitlab.com` for it to be investigated. Forwarding as an attachment helps standardize the workflow to extract the contents of the email for easier analysis. **OR**
 3. Report the email as phishing via built-in Gmail reporting.
 
