Add engineering leaders for Development stages

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -160,6 +160,7 @@
 [Cormac Foster]: /company/team/#cfoster3
 [Brian Glanz]: /company/team/#brianglanz
 [Parker Ennis]: /company/team/#parker_ennis
+[Aathira Nair]:/company/team/#anair5
 
 [Shaun McCann]: /company/team/#shaunmccann
 [Lyle Kozloff]: /company/team/#lkozloff
