--- a/source/direction/manage/template.html.md.erb
+++ b/source/direction/manage/template.html.md.erb
@@ -39,13 +39,17 @@ canonical_path: "/direction/manage/"
 
 <%= partial("direction/manage/workspace/templates/overview") %>
 
-### Optimize
-
-<%= partial("direction/manage/value_stream_management/templates/overview") %>
-
 ### Import
 
 <%= partial("direction/manage/importers/templates/overview") %>
+
+### Foundations
+
+<%= partial("direction/manage/foundations/templates/overview") %>
+
+### Integrations
+
+<%= partial("direction/manage/integrations/templates/overview") %>
 
 ### Resourcing and Investment
 
