--- a/source/direction/manage/templates/_groups.erb
+++ b/source/direction/manage/templates/_groups.erb
@@ -16,9 +16,12 @@ Manage is composed of 5 distinct groups that support our mission of **delighting
 * [Import](https://about.gitlab.com/handbook/product/categories/#import-group)
   * [Importers](https://about.gitlab.com/direction/manage/importers/)
   * [Internationalization](https://about.gitlab.com/direction/manage/internationalization/)
-* [Optimize](https://about.gitlab.com/handbook/product/categories/#optimize-group)
-  * [DevOps Reports](https://about.gitlab.com/direction/manage/devops-reports/)
-  * [Value Stream Management ](https://about.gitlab.com/direction/manage/value_stream_management/)
+* [Foundations](https://about.gitlab.com/handbook/product/categories/#foundations-group)
+ * [Navigation and Settings](https://about.gitlab.com/direction/manage/foundations/navigation_settings/)
+ * [Design System](https://about.gitlab.com/direction/manage/foundations/design_system/)
+ * [GitLab Documentation Site](https://about.gitlab.com/direction/manage/foundations/gitlab_docs/)
+* [Integrations](https://about.gitlab.com/handbook/product/categories/#integrations-group)
+  * [Integrations](https://about.gitlab.com/direction/manage/integrations/)
 
 * Our **vision** looks ahead ~3 years toward an ambitious future state. Our stage has a vision, and so do each of our groups.
 * Our **goals** help provide measurable objectives that are conditions of success for us to realize our vision. We can't realize our stage/group vision without accomplishing these things.
