--- a/source/direction/manage/templates/_next.erb
+++ b/source/direction/manage/templates/_next.erb
@@ -8,13 +8,17 @@
 
 <%= partial("direction/manage/workspace/templates/next") %>
 
-### Optimize
-
-<%= partial("direction/manage/value_stream_management/templates/next") %>
-
 ### Import
 
 <%= partial("direction/manage/importers/templates/next") %>
+
+### Foundations
+
+<%= partial("direction/manage/foundations/templates/next") %>
+
+### Integrations
+
+<%= partial("direction/manage/integrations/templates/next") %>
 
 #### What we're not doing
 
