--- a/source/direction/plan/value_stream_management/index.html.md.erb
+++ b/source/direction/plan/value_stream_management/index.html.md.erb
@@ -10,7 +10,7 @@ canonical_path: "/direction/manage/value_stream_management/"
 
 | Category | **Value Stream Management** |
 | --- | --- |
-| Stage | [Manage](https://about.gitlab.com/handbook/product/categories/#manage-stage) |
+| Stage | [Plan](https://about.gitlab.com/handbook/product/categories/#plan-stage) |
 | Group | [Optimize](https://about.gitlab.com/handbook/product/categories/#optimize-group) |
 | Maturity | [Minimal](/direction/maturity/) |
 | Content Last Reviewed | `2022-08-29` |
@@ -23,7 +23,7 @@ Thanks for visiting the Value Stream Management direction page. This page is act
 
 ### Overview
 
-<%= partial("direction/manage/value_stream_management/templates/overview") %>
+<%= partial("direction/plan/value_stream_management/templates/overview") %>
 
 ### Vision
 
@@ -53,7 +53,7 @@ For Value Stream Management, we are targeting the following personas (in priorit
 
 ### What's next and why
 
-<%= partial("direction/manage/value_stream_management/templates/next") %>
+<%= partial("direction/plan/value_stream_management/templates/next") %>
 
 ### Goals
 
