--- a/source/direction/manage/importers/templates/_overview.erb
+++ b/source/direction/manage/importers/templates/_overview.erb
@@ -2,7 +2,7 @@ The mission of the Importers category is to provide a great experience migrating
 
 Our goal is to build importers that our customers find valuable, reliable and easy to use, thereby removing friction for migrating to GitLab and creating a more positive first impression when adopting GitLab.
 
-## Problems to solve
+### Problems to solve
 
 A typical organization looking to adopt GitLab already has many other tools. Artifacts such as code, build pipelines, issues and epics may already exist and are being used daily. Seamless transition of work in progress is critically important and a great experience during this migration creates a positive first impression of GitLab. Solving these transitions, even for the complex cases, is crucial for GitLab’s ability to expand in the market. Instilling the confidence in the user that their data will be migrated quickly and with maximum care is of utmost importance.
 
@@ -10,4 +10,4 @@ At this time, GitLab is targeting the following high-level areas for import: Git
 
 The Manage:Import group is focused on GitLab Migration, which is migration of groups and projects from one GitLab instance to another, as well as on importers for other software development tools like GitHub or Bitbucket. 
 
-[Jira Integration](/direction/ecosystem/integrations/#improve-jira-integration-support) is owned by the Manage:Integrations group and the [Jenkins Importer](https://about.gitlab.com/direction/verify/jenkins_importer/) is owned by the Verify:Pipeline Authoring group.
+[Jira Integration](/direction/manage/integrations/#improve-jira-integration-support) is owned by the Manage:Integrations group and the [Jenkins Importer](https://about.gitlab.com/direction/verify/jenkins_importer/) is owned by the Verify:Pipeline Authoring group.
