Timecard & Pay Schedule information

--- a/sites/handbook/source/handbook/finance/non-exempt/index.html.md.erb
+++ b/sites/handbook/source/handbook/finance/non-exempt/index.html.md.erb
@@ -11,7 +11,7 @@ description: "Clarifying the GitLab Policies and Processes related to US-based N
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-For GitLab's US-based team members employed through GitLab Inc or GitLab Federal LLC, the United States [Fair Labor Standards Act](https://www.dol.gov/agencies/whd/flsa), provides guidelines on employment status, child labor, minimum wage, overtime pay, and record-keeping requirements. It determines which employees are exempt from the Act (not covered by it) and which are non-exempt (covered by the Act). It establishes wage and time requirements when minors can work, sets the minimum wage that must be paid, and mandates when overtime must be paid. 
+For GitLab's US-based team members employed through GitLab, Inc. or GitLab Federal LLC, the United States [Fair Labor Standards Act](https://www.dol.gov/agencies/whd/flsa), provides guidelines on employment status, child labor, minimum wage, overtime pay, and record-keeping requirements. It determines which employees are exempt from the Act (not covered by it) and which are non-exempt (covered by the Act). It establishes wage and time requirements when minors can work, sets the minimum wage that must be paid, and mandates when overtime must be paid. 
 
 ## Definitions
 
@@ -49,12 +49,11 @@ As a fully distributed company, any team member classified as a non-exempt emplo
 
 When operating requirements or other needs cannot be met during regular working hours, team members may be scheduled to work overtime. Paid time off such as sick pay, holiday pay, vacation pay and jury duty pay (where applicable) will not count toward hours worked for the purpose of determining overtime pay.
 
-Non-exempt team members must report all time worked and not work any time that is not authorized by their managers. This means non-exempt team members must not start work early, finish work late, work during a meal or rest break, or perform any other extra or overtime work unless directed to do so. Team members who have questions about when or how many hours they are expected to work should contact their manager. If they have any additional concerns, they should reach out to Team Member Relations at `teammemberrelations@gitlab.com`.  
+Non-exempt team members **must** report all time worked and not work any time that is not authorized by their managers. This means non-exempt team members **must not** start work early, finish work late, work during a meal or rest break, or perform any other extra or overtime work unless directed to do so. Team members who have questions about when or how many hours they are expected to work should contact their manager. If they have any additional concerns, they should reach out to Team Member Relations at `teammemberrelations@gitlab.com`.  
 
 It is a violation of GitLab’s policy for anyone to instruct or encourage another team member to work “off the clock,” to incorrectly report hours worked, or to alter another team member’s time records. If any team member is directed or encouraged to incorrectly report hours worked, or to alter another team member’s time records, they should report the incident immediately to Team Member Relations at `teammemberrelations@gitlab.com`. 
 
-GitLab requires manager approval prior to non-exempt team members working overtime. Unless a non-exempt team member resides in one of the below states, overtime is working over 40 hours in a workweek, and results in a pay of 1.5x. A workweek is a Sunday to Saturday week. 
-
+GitLab **requires** manager approval prior to non-exempt team members working overtime. Unless a non-exempt team member resides in one of the below states, overtime is working over 40 hours in a workweek, and results in a pay of 1.5x. A workweek is a Sunday to Saturday week. 
 
 | State  | Overtime Requirements        |
 |---------------|-----------------------------------------------|
@@ -65,11 +64,13 @@ GitLab requires manager approval prior to non-exempt team members working overti
 
 ## Overtime Approvals
 
-All overtime work must be authorized in advance by the team member’s manager. The process to request overtime is done in a manner agreed upon between manager and team member; by email only, for documentation purposes.
+**All overtime work must be authorized in advance by the team member’s manager**. The process to request overtime is done in a manner agreed upon between manager and team member; by email only, for documentation purposes.
 
-Working overtime without prior authorization may result in disciplinary action. It is the manager's responsibility to review timecards. If overtime is submitted without prior authorization, please communicate with your direct report to better understand what happened, and to reiterate our overtime approvals policy.
+*Working overtime without prior authorization may result in disciplinary action*. It is the manager's responsibility to review timecards. If overtime is submitted without prior authorization, please communicate with your direct report to better understand what happened, and to reiterate our overtime approvals policy.
 
-## ADP Timekeeping Portal
+## ADP Time & Attendance Portal
+
+GitLab, Inc. and GitLab Federal LLC use ADP Essential Time & Attendance to report the hours worked and time off for non-exempt team members in the US. ADP Essential Time & Attendance is included within ADP Workforce Now, which is accessed through Okta SSO.
 
 ### ADP Mobile Solutions
 
@@ -82,3 +83,20 @@ Team members are recommended to also download the ADP Mobile Solutions app throu
   - Select `GitLab`.
   - You should then be prompted to sign into Okta, which will validate you. 
 
+### Pay Schedule
+
+Non-exempt team members in the US are paid on a bi-weekly basis (every two weeks). *Payday is every other Friday*. In the event that a pay day falls on a bank holiday, direct deposits will be paid the day before the holiday.
+
+Pay for non-exempt team members in the US is calculated 6 days in arrears to allow time for processing. For example, for period 2023-08-13 to 2023-08-26, payment will be direct deposited on 2023-09-01.
+
+### Timecard Reporting
+
+*All time worked and time off should be recorded promptly in your timesheet in ADP Essential Time & Attendance*. Instructions for team members on how to enter time into the timesheet can be found in our Time & Attendance training for Team Members. **LINK to LevelUp TBA**
+
+All timesheets should be completed, approved by the manager, and submitted to Payroll by **Noon Eastern** on the Monday *following* the end of a pay period. In the event that such a day falls on a holiday, timesheets will be due by **9am Eastern** on the Tuesday *after* the holiday. At the due date and time, all timesheets will be locked for payroll processing, and no further changes will be accepted. Any corrections needed after the due date and time should be promptly reported to Payroll by sending an email to `uspayroll@gitlab.com`.  
+
+Please review the [US Bi-Weekly Pay Schedule](https://docs.google.com/spreadsheets/d/15O3DAOXE2ENVHL4e9QSGulALDQ0tPT-FO4x9z1GufFU/edit?usp=sharing) for all pay periods, timesheet due dates, and pay dates. Payroll will send out a reminder email to all non-exempt US team members and their managers on the Friday at the end of each time periods, in preparation for the Monday submission and approval deadlines.
+
+### Timecard Approval by Managers
+
+Please review our instructions on how to access ADP Essential Time & Attendance and how to approve timesheets. **LINK to LevelUp TBA**
