Correct the abbreviation for small and medium business

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-11-accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-11-accelerate-cloud-adoption-with-gitlabs-open-source-partnership-with-google-cloud.html.md.erb
@@ -27,11 +27,11 @@ For this, GitLab needed to collaborate with the hyper clouds, and Google Cloud e
 
 First, we reached out and polled our customers to try and understand their cloud adoption use cases. 
 
-We found the enterprise market segment focused on migrating existing systems to the cloud to achieve their digital transformation targets, while the SME and startup segment focused on embracing the cloud for greenfield initiatives.
+We found the enterprise market segment focused on migrating existing systems to the cloud to achieve their digital transformation targets, while the SMB and startup segment focused on embracing the cloud for greenfield initiatives.
 
 ## Cloud Run and Cloud SQL
 
-While motivations for enterprise and SME segments varied, the underlying use case —– deploying web applications to the cloud —– remained the same. Thus, we selected two of the more popular Google Cloud managed services that web applications make use of: [Cloud Run](https://cloud.google.com/run) and [Cloud SQL](https://cloud.google.com/sql).
+While motivations for enterprise and SMB segments varied, the underlying use case —– deploying web applications to the cloud —– remained the same. Thus, we selected two of the more popular Google Cloud managed services that web applications make use of: [Cloud Run](https://cloud.google.com/run) and [Cloud SQL](https://cloud.google.com/sql).
 
 Cloud Run makes it possible to build and deploy scalable containerized apps written in any language (including Go, Python, Java, Node.js, .NET, and Ruby) on a fully managed platform. Meanwhile, Cloud SQL is a fully managed relational database service for MySQL, PostgreSQL, and SQL Server with rich extension collections, configuration flags, and developer ecosystems.
 
