Add support-managers-apac to listed Groups

--- a/sites/handbook/source/handbook/support/index.html.md.erb
+++ b/sites/handbook/source/handbook/support/index.html.md.erb
@@ -252,6 +252,8 @@ GitLab.com.
 | [@gitlab-com/support/customers-console](https://gitlab.com/gitlab-com/support/customers-console) | Support members with CustomersDot console access |
 | [@gitlab-com/support/licensing-subscription](https://gitlab.com/gitlab-com/support/licensing-subscription) | Support members focused on License and Renewals |
 | [@gitlab-com/support/managers](https://gitlab.com/gitlab-com/support/managers) | All support managers |
+| [@gitlab-com/support/managers/amer](https://gitlab.com/gitlab-com/support/managers/amer) | All AMER support managers |
+| [@gitlab-com/support/managers/apac](https://gitlab.com/gitlab-com/support/managers/apac) | All APAC support managers |
 
 #### Projects
 {: .no_toc}
