Add The Recycling Partnership role to HoR handbook page

--- a/sites/uncategorized/source/company/culture/all-remote/head-of-remote/index.html.md.erb
+++ b/sites/uncategorized/source/company/culture/all-remote/head-of-remote/index.html.md.erb
@@ -132,6 +132,7 @@ Multitudes of firms are hiring for this role without formally posting a job desc
 1. ADP: [Principal, Future of Work](https://www.linkedin.com/in/gmota/)
 1. SAP: [SVP & Chief Future of Work](https://twitter.com/Schmeichel_C)
 1. Deloitte: [Global Future of Work Leader](https://twitter.com/sthatfield)
+1. The Recycling Partnership: [Director of Organizational Effectiveness](https://www.linkedin.com/in/tannenbaum/)
 
 
 ### What function or department does a Head of Remote sit in?
