Clarify wording in prominent update statement on the free tier changes blog post

--- a/sites/uncategorized/source/blog/blog-posts/2022-03-24-efficient-free-tier.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-03-24-efficient-free-tier.html.md.erb
@@ -11,7 +11,7 @@ postType: corporate
 comments: false
 ---
 
-> **2022-08-16 UPDATE:** User limits will not be applied before 2022-10-19. Also, user limits do not apply to top-level namespaces with only public projects. If you're running an Open Source project, please also consider the [GitLab for Open Source program](/solutions/open-source/) which can provide more CI/CD minutes as well as additional storage.
+> **2022-08-16 UPDATE:** User limits will not be applied before 2022-10-19. Also, user limits do not apply to top-level namespaces with public visibility. If you're running an Open Source project, please also consider the [GitLab for Open Source program](/solutions/open-source/) which can provide more CI/CD minutes as well as additional storage.
 
 {::options parse_block_html="true" /}
 <div class="panel panel-info">
