Add Integration Roulette reviews information to Integrations handbook

--- a/sites/handbook/source/handbook/engineering/development/dev/ecosystem/integrations/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/ecosystem/integrations/index.html.md.erb
@@ -169,6 +169,10 @@ Deliverable / Stretch Board tracks `~Deliverable` and `~Stretch` issues.
 
 <%= partial("handbook/engineering/development/dev/ecosystem/integrations/retrospectives.erb") %>
 
+## Merge request roulette reviews
+
+<%= partial("handbook/engineering/development/dev/ecosystem/integrations/roulette_reviews.erb") %>
+
 ## Monitoring
 
 <%= partial("handbook/engineering/development/dev/ecosystem/integrations/monitoring.erb") %>
