Certify direction typos

--- a/source/direction/plan/certify/index.html.md.erb
+++ b/source/direction/plan/certify/index.html.md.erb
@@ -74,7 +74,7 @@ We would like to extend this functionality to provide additional methods for lin
 
 ### Certify Team Long term goals
 
-Once we have certify a great option for the Software Developer](/marketing/strategic-marketing/roles-personas/#sasha-software-developer) and [Software Engineering in Test](/marketing/strategic-marketing/roles-personas/#simone-software-engineer-in-test), we plan to continue iterating as follows:
+Once we have certify as a great option for the [Software Developer](/marketing/strategic-marketing/roles-personas/#sasha-software-developer) and [Software Engineering in Test](/marketing/strategic-marketing/roles-personas/#simone-software-engineer-in-test) personas, we plan to continue iterating as follows:
 
 - GitLab continues to support larger enterprises, and the natural need for multiple levels of requirements and test cases which can be decomposed down to requirements or test cases at lower levels has risen. Our objective is to expand our work item definition to allow for multi-level objects. This would allow for teams to create a system of sub-systems and perform all requirement tracing and test tracing directly within GitLab, further adhering to our mission as The One DevOps Platform.
 - We recognize that requirements and their associated trace data is often required as release evidence / artifacts. We would like to work closely with our release team to integrate requirements traceability into release evidence.
